TEST_PROGRAMS/INVALID/david_rapoport/invalid4.min
# semicolon at the end of while loop
var x : float;

while 1 do
 x = 3.9;
done;

x = 4.3;
